--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -52,17 +52,6 @@ p, span, a {
     font-weight: bolder;
 }
 
-.body-wrapper {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-}
-.row {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-}
 /*
     Title bar at top
 */
@@ -73,6 +62,8 @@ p, span, a {
     display: flex;
     flex-direction: row;
     width: 100%;
+    position: sticky;
+    top: 0;
 }
 
 .top-title-bar h3 {
@@ -93,6 +84,11 @@ p, span, a {
     display: flex;
     flex-direction: column;
     width: max-content;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 82px;
+    height: calc(100vh - 82px);
+    float: left;
     /* flex-grow: 1; */
 }
 
@@ -110,7 +106,6 @@ p, span, a {
 */
 
 .main-wrapper {
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
 }
