--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -16,7 +16,7 @@
 html {
     font-size: 13pt;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    height: 100%;
+    min-height: 100%;
     font-weight: lighter;
 }
 
